# E-Project-Common-screen-watch-ocr-tauri

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
crates/screen-watch-core/: Cargo.toml  build.rs
crates/screen-watch-core/examples/: detect-config-frame.rs
crates/screen-watch-core/src/: audio.rs  build.rs  config.rs  data_dir.rs  detect.rs  evidence.rs  lib.rs  ocr.rs  profile.rs  scan.rs  sources.rs
docs/: ACCEPTANCE.md  COMPARISON_AUDIT.md  DECISION.md  FUNCTIONAL_ACCEPTANCE.md  MANUAL_GATES.md  PYTHON_BASELINE_TESTS.txt  VERIFICATION_RUN_20260707_1654.md  VERIFICATION_RUN_20260707_1903.md  VERIFICATION_RUN_20260707_1947.md  VERIFICATION_RUN_20260707_2245.md
scripts/: build-tauri.mjs  coexistence-smoke.ps1  evidence-reference-check.ps1  feature-surface-audit.mjs  legacy-cli-boundary-audit.mjs  manual-gate-evidence.ps1  ocr-corpus-smoke.ps1  ocr-smoke.ps1  ocr-text-parity-smoke.ps1  package-portable.ps1  packaged-smoke.ps1  production-template-parity-smoke.ps1  production-template-performance-smoke.ps1  python-baseline-coverage-audit.mjs  python-profile-compat-smoke.ps1  template-benchmark.ps1  template-parity-benchmark.ps1  tray-menu-smoke.ps1  verify-migration.ps1  webview-visual-smoke.mjs
src/: main.js  styles.css  ui-behavior.js  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  clipboard_import.rs  dwm_preview.rs  lib.rs  main.rs  monitor_session.rs  preview_cache.rs  screen_capture.rs  single_instance.rs  startup.rs  tray.rs  window_capture.rs  window_layout.rs  window_sources.rs
(+19 files in other folders)
