[package]
name = "screen-watch-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
ocr = ["dep:pure-onnx-ocr"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "webp"] }
png = "0.17"
pure-onnx-ocr = { version = "0.1.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
